fix image dimentions, add copy to clipboard, add dark mode to preview, change lib path

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -30,6 +30,8 @@ $twitter-color:         #5E9DD1;
 
 $code-color:			#ECF1FC;
 
+$dark-color: 			#363636;
+
 //== Scaffolding
 //
 //## Settings for some of the most global styles.
